# anime_game_patcher

./: Cargo.toml  README.md  build.rs
src/: main.rs  metadata_patcher.rs
